kustomizations/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
