kustomizations/test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - backend:
          service:
            name: test-app
            port:
              number: 8080
        path: /
        pathType: Prefix
